--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <meta charset="utf-8">
         <title>Sumit Sarkar</title>
         <meta name="description" content="Sumit Sarkar's humble portfolio.">
-        <link href="https://npmcdn.com/basscss@8.0.1/css/basscss.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
-        <link href="/styles/style.css" rel="stylesheet" type="text/css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/styles/style.min.css" media="none" onload="if(media!='all')media='all'">
+        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css" media="none" onload="if(media!='all')media='all'">
+        <noscript><link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css"></noscript>
+        <noscript><link rel="stylesheet" href="/styles/style.min.css"></noscript>
 </head>
 <body>
     <div class="clearfix container">
@@ -29,12 +31,12 @@
             <section class="mt3 content-experience">
                 <h3>Experience</h3>
                 <div class="clearfix">
-                    <div class="col col-3">
+                    <div class="col lg-col-3 sm-col-12">
                         <p class="bold">VirtusaPolaris</p>
                         <p class="color-grey mb0">Chennai</p>
                         <p class="color-grey mt1">2015 to Present</p>
                     </div>
-                    <div class="col col-9">
+                    <div class="col lg-col-9 sm-col-12 pl2">
                         <p class="bold">Associate Consultant</p>
                         <p>Leading closely knit teams to deliver functionalities for products in question.</p>
                         <ul>
@@ -43,12 +45,12 @@
                         </ul>
                     </div>
                     <div class="clearfix"></div>
-                    <div class="col col-3">
+                    <div class="col lg-col-3 sm-col-12">
                         <p class="bold">VirtusaPolaris</p>
                         <p class="color-grey mb0">Chennai</p>
                         <p class="color-grey mt1">2015 to Present</p>
                     </div>
-                    <div class="col col-9">
+                    <div class="col lg-col-9 sm-col-12 pl2">
                         <p class="bold">Software Engineer</p>
                         <p>Mostly worked as a front-end developer for MVC/MVP/MVVM JavaScript apps.</p>
                         <ul>
@@ -61,12 +63,12 @@
             <section class="mt3 content-education">
                 <h3>Education</h3>
                 <div class="clearfix">
-                    <div class="col col-3">
+                    <div class="col lg-col-3 sm-col-12">
                         <p class="bold">Graduation</p>
                         <p class="color-grey mb0">NIT Agartala</p>
                         <p class="color-grey mt1">2010-2014</p>
                     </div>
-                    <div class="col col-9">
+                    <div class="col lg-col-9 sm-col-12 pl2">
                         <p>Bachelors of Technology, Computer Science</p>
                     </div>
                 </div>
@@ -75,12 +77,12 @@
             <section class="mt3 pb3 content-skillset">
                 <h3 class="mb4">Languages and Frameworks</h3>
                 <div class="clearfix">
-                    <div class="col col-2"><i class="icon-extra-large devicon-java-plain-wordmark"></i></div>
-                    <div class="col col-2"><i class="icon-extra-large devicon-javascript-plain"></i></div>
-                    <div class="col col-2"><i class="icon-extra-large devicon-backbonejs-plain-wordmark"></i></div>
-                    <div class="col col-2"><i class="icon-extra-large devicon-meteor-plain-wordmark"></i></div>
-                    <div class="col col-2"><i class="icon-extra-large devicon-css3-plain-wordmark"></i></div>
-                    <div class="col col-2"><i class="icon-extra-large devicon-html5-plain-wordmark"></i></div>
+                    <div class="col lg-col-2 sm-col-6 mb3 center"><i class="icon-extra-large devicon-java-plain-wordmark"></i></div>
+                    <div class="col lg-col-2 sm-col-6 mb3 center"><i class="icon-extra-large devicon-javascript-plain"></i></div>
+                    <div class="col lg-col-2 sm-col-6 mb3 center"><i class="icon-extra-large devicon-backbonejs-plain-wordmark"></i></div>
+                    <div class="col lg-col-2 sm-col-6 mb3 center"><i class="icon-extra-large devicon-meteor-plain-wordmark"></i></div>
+                    <div class="col lg-col-2 sm-col-6 mb3 center"><i class="icon-extra-large devicon-css3-plain-wordmark"></i></div>
+                    <div class="col lg-col-2 sm-col-6 mb3 center"><i class="icon-extra-large devicon-html5-plain-wordmark"></i></div>
                 </div>
             </section>
 
